static/css/main.css
/* FORM STYLES */
label {
  font-variant: small-caps;
}

input,
button {
  margin: 0.5rem 0;
}

/* FOOTER STYLES */
footer a.btn-outline-dark {
  border-style: none;
  padding: 0.5em 0.8em;
}

footer a i {
  font-size: 1.5rem;
}

/* CAROUSEL STYLES */
.review-item {
  font-size: 1.3rem;
}

.review-inner {
  height: 13rem;
}

#featured-reviews {
  width: 35rem;
}

/* GAMES STYLES */
#solution,
#number-pad,
#scoreboard,
#time-left,
#result {
  display: none;
}

